[project]
name = "hook-review-dpo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    'torch~=2.7.0',
    'transformers~=4.52.4',
    'datasets~=3.6.0',
    'accelerate~=1.7.0',
    'peft~=0.15.2',
    'trl~=0.18.1',
    'wandb~=0.19.11',
    'tqdm~=4.67.1',
    'numpy~=2.2.6',
    'pandas~=2.2.3'
]
